<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".categories_activity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="95dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.Chip
            android:layout_width="94dp"
            android:layout_height="48dp"
            android:text="@string/Все_меню"
            app:chipBackgroundColor="#F8F7F5"></com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:text="@string/салаты"
            app:chipBackgroundColor="#F8F7F5"></com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:layout_width="86dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:text="@string/С_рисом"
            app:chipBackgroundColor="#F8F7F5"></com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:layout_width="86dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:text="@string/С_рыбой"
            app:chipBackgroundColor="#F8F7F5"></com.google.android.material.chip.Chip>

    </LinearLayout>

    <GridLayout
        android:layout_width="343dp"
        android:layout_height="663dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="16dp"
        android:columnCount="3"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="109dp"
            android:layout_height="109dp"
            android:background="@color/white"
            android:onClick="go_to_the_food_window_activity"
            app:srcCompat="@drawable/frame_583" />

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="109dp"
            android:layout_height="110dp"
            android:layout_marginStart="8dp"
            android:background="@color/white"
            android:onClick="go_to_the_food_window_activity"
            app:srcCompat="@drawable/frame_585" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="109dp"
            android:layout_height="109dp"
            android:layout_marginStart="8dp"
            android:background="@color/white"
            android:onClick="go_to_the_food_window_activity"
            app:srcCompat="@drawable/frame_584" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/рис_с_овощами"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:text="@string/салат_по_восточному"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/рыба_с_овощами_и_рисом"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton8"
            android:layout_width="109dp"
            android:layout_height="109dp"
            android:layout_marginTop="29dp"
            android:background="@color/white"
            android:onClick="go_to_the_food_window_activity"
            app:srcCompat="@drawable/frame_586" />

        <ImageButton
            android:id="@+id/imageButton9"
            android:layout_width="109dp"
            android:layout_height="109dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="29dp"
            android:background="@color/white"
            android:onClick="go_to_the_food_window_activity"
            app:srcCompat="@drawable/frame_587" />

        <ImageButton
            android:id="@+id/imageButton10"
            android:layout_width="109dp"
            android:layout_height="110dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="29dp"
            android:background="@color/white"
            android:onClick="go_to_the_food_window_activity"
            app:srcCompat="@drawable/frame_588" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/тортеллини"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:text="@string/зеленый_салат"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:text="@string/рулеты_из_ветчины"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton11"
            android:layout_width="109dp"
            android:layout_height="109dp"
            android:layout_marginTop="29dp"
            android:background="@color/white"
            android:onClick="go_to_the_food_window_activity"
            app:srcCompat="@drawable/frame_589" />

        <ImageButton
            android:id="@+id/imageButton13"
            android:layout_width="109dp"
            android:layout_height="110dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="29dp"
            android:background="@color/white"
            android:onClick="go_to_the_food_window_activity"
            app:srcCompat="@drawable/frame_591" />

        <ImageButton
            android:id="@+id/imageButton12"
            android:layout_width="109dp"
            android:layout_height="109dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="29dp"
            android:background="@color/white"
            android:onClick="go_to_the_food_window_activity"
            app:srcCompat="@drawable/frame_590" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/рис_с_овощами"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:text="@string/салат_по_восточному"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/рыба_с_овощами_и_рисом"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton14"
            android:layout_width="109dp"
            android:layout_height="109dp"
            android:layout_marginTop="29dp"
            android:background="@color/white"
            android:onClick="go_to_the_food_window_activity"
            app:srcCompat="@drawable/frame_592" />

        <ImageButton
            android:id="@+id/imageButton15"
            android:layout_width="109dp"
            android:layout_height="109dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="29dp"
            android:background="@color/white"
            android:onClick="go_to_the_food_window_activity"
            app:srcCompat="@drawable/frame_593" />

        <ImageButton
            android:id="@+id/imageButton16"
            android:layout_width="109dp"
            android:layout_height="110dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="29dp"
            android:background="@color/white"
            android:onClick="go_to_the_food_window_activity"
            app:srcCompat="@drawable/frame_594" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/тортеллини"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:text="@string/зеленый_салат"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:text="@string/рулеты_из_ветчины"
            android:textSize="14sp"
            android:textStyle="bold" />
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="724dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="48dp"
            android:layout_height="49dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@color/white"
            app:srcCompat="@drawable/tab_6" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="48dp"
            android:layout_height="49dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@color/white"
            app:srcCompat="@drawable/tab_2" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="48dp"
            android:layout_height="49dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@color/white"
            app:srcCompat="@drawable/tab_3" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="48dp"
            android:layout_height="49dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="32dp"
            android:layout_weight="1"
            android:background="@color/white"
            app:srcCompat="@drawable/tab_5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="691dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButton17"
            android:layout_width="6dp"
            android:layout_height="12dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="68dp"
            android:onClick="go_back_to_the_main_activity"
            app:srcCompat="@drawable/vector_3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="119dp"
            android:layout_marginTop="63dp"
            android:layout_marginEnd="60dp"
            android:text="adawdawdawqd">

        </TextView>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginTop="51dp"
            android:layout_marginEnd="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>